--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +20,10 @@
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "express": "^4.19.2",
     "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "webpack-dev-middleware": "^7.3.0",
+    "webpack-dev-server": "^5.0.4"
   }
 }
